# Collector

./: .gitignore  Cargo.toml  README.md  build.rs  collector_config_linux.toml  collector_config_windows.toml  collector_packer_config.json
.github/workflows/: release.yml  security.yml
collector_cli/: Cargo.toml  build.rs
collector_cli/src/: args.rs  config.rs  list_parse.rs  main.rs  values_linux.rs  values_windows.rs
collector_core/: Cargo.toml
collector_core/src/: error.rs  lib.rs  linux.rs  utils.rs  windows.rs  windows_vss.rs  writer.rs
collector_core/src/csv/: csvlog.rs  mod.rs
collector_core/src/extract/: get.rs  lowfs.rs  mod.rs  sector_reader.rs
collector_core/src/mount/: mod.rs  vss.rs  vss_info.rs
collector_core/src/platform/: collector.rs  mod.rs  vss_collector.rs
collector_core/src/resource/: file_struct.rs  mod.rs  parser.rs
collector_engine/: Cargo.toml
collector_engine/src/: collect.rs  collectvss.rs  helper.rs  lib.rs  parser.rs  writer.rs
collector_engine/src/extract/: mod.rs
collector_gui/: Cargo.toml  Dioxus.toml  README.md  build.rs  package.json  tailwind.config.js
collector_gui/assets/css/: input.css  tailwind.css
collector_gui/src/: config.rs  information.rs  list.rs  main.rs  main_old.rs  start.rs  values_linux.rs  values_windows.rs
collector_gui/src/app/: information.rs  list.rs  mod.rs  output.rs  resources.rs  start.rs
collector_gui/src/com/: collection.rs  config.rs  mod.rs  resources.rs
collector_gui/src/gui/: app.rs  message.rs  mod.rs
collector_gui/src/style/: icons.rs  theme.rs
collector_gui/src/utils/: mod.rs  values_linux.rs  values_windows.rs
collector_gui/src/views/: footer.rs  input_section.rs  mod.rs  modal.rs  output_section.rs  resources_section.rs  resources_table.rs
collector_gui_old/: Cargo.toml  app.manifest
collector_gui_old/src/: config.rs  main.rs
collector_gui_old/src/app/: information.rs  list.rs  mod.rs  output.rs  utils.rs
collector_packer/: Cargo.toml
collector_packer/src/: main.rs
