[package]
name = "collector_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
collector_core = { path = "../collector_core" }

clap = { version = "4.5.57", features = ["derive"] }
simplelog = { version = "0.12.2", features = ["termcolor"] }
log = "0.4.29"
tokio = { version = "1.49.0", features = ["full"] }
chrono = "0.4.43"
sysinfo = "0.38.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"

[build-dependencies]
winres = "0.1.12"
