[package]
name = "collector_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true


[dependencies]
thiserror = "2.0"
tokio = { version = "1.46.0", features = ["full"] }
glob = "0.3.2"
walkdir = "2.5.0"
filetime = "0.2.25"
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"

ntfs = "0.4.0" # see if only ask on windpws
sysinfo = "0.36.1"
regex = "1.11.1"
log = "0.4.27"
uuid = { version = "1.17.0", features = ["fast-rng", "v4"] }
sha1 = "0.10.6"
hex = "0.4.3"
zip = { version = "4.3.0", features = ["aes-crypto", "_deflate-any"] }
csv-async = { version = "1.3.1", features = ["tokio"] }
chrono = "0.4.41"


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
    "vsbackup", "vsserror", "winnt", "winerror", "cguid", 
    "combaseapi", "impl-default", "fileapi", "securitybaseapi", 
    "processthreadsapi", "minwindef"
] }
widestring = "1.2.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["user"] }

[dev-dependencies]
tempfile = "3.14"
tokio-test = "0.4"
