[package]
name = "collector_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true


[dependencies]
thiserror = "2.0"
tokio = { version = "1.49.0", features = ["full"] }
glob = "0.3.3"
walkdir = "2.5.0"
filetime = "0.2.27"
serde = { version = "1.0.228", features = ["derive"] }
yaml_serde = "0.10.3"

ntfs = "0.4.0" # see if only ask on windows
sysinfo = "0.38.0"
regex = "1.12.3"
log = "0.4.29"
uuid = { version = "1.20.0", features = ["fast-rng", "v4"] }
sha1 = "0.10.6"
hex = "0.4.3"
zip = { version = "7.2.0", features = ["aes-crypto", "_deflate-any"] }
csv-async = { version = "1.3.1", features = ["tokio"] }
chrono = "0.4.43"


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
    "vsbackup", "vsserror", "winnt", "winerror", "cguid", 
    "combaseapi", "impl-default", "fileapi", "securitybaseapi", 
    "processthreadsapi", "minwindef"
] }
widestring = "1.2.1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.1", features = ["user"] }

[dev-dependencies]
tempfile = "3.24"
tokio-test = "0.4"
