[package]
name = "collector_engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

glob = "0.3.2"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version="1.46.0", features = ["full"] }
ntfs = "0.4.0"
anyhow = "1.0.98"
regex = "1.11.1"
log = "0.4.27"
walkdir = "2.5.0"
filetime = "0.2.25"
serde_yml = "0.0.12"
uuid = { version = "1.17.0", features = ["fast-rng", "v4"] }
sha1 = "0.10.6"
hex = "0.4.3"
sysinfo = "0.35.2"
zip = { version = "4.2.0", features = ["aes-crypto", "_deflate-any"] }
csv-async = { version = "1.3.1", features = ["tokio"] }
chrono = "0.4.41"
winapi = { version = "0.3.9", features = ["vsbackup", "vsserror", "winnt", "winerror", "cguid", "combaseapi", "impl-default", "fileapi", "securitybaseapi", "processthreadsapi", "minwindef"] }
widestring = "1.2.0"