[package]
name = "collector_gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
collector_core = { path = "../collector_core" }

iced = { version = "0.14", features = ["tokio", "advanced", "svg", "image"] }
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.11"
rfd = "0.17"
dark-light = "2.0"

[build-dependencies]
winres = "0.1.12"
